# face-landmarks-research-lab

./: .gitignore  PAPER.en.md  PAPER.md  README.en.md  README.md  optimization_log.md
configs/: 300w_fan4_finetune.yaml  300w_global.yaml  300w_global_random.yaml  300w_lmnet_kd.yaml  300w_lmnet_kd_v3.yaml  300w_lmnet_pseudo_finetune.yaml  300w_lmnet_w26_100k_finetune.yaml  300w_lmnet_w26_celeba100k.yaml  300w_lmnet_w26_finetune.yaml  300w_lmnet_wflw_pseudo.yaml  300w_pip.yaml  300w_resnet18_transfer.yaml  300w_scratch.yaml  300w_unet_heatmap.yaml  celeba_ssl.yaml  facesyn68_sample.yaml  wflw68_pfld.yaml  wflw_scratch.yaml
face-det/: README.en.md  README.md  REPORT.en.md  REPORT.md
face-det/configs/: face_yolo_dataset.yaml  wider_easy.yaml  wider_hard.yaml
face-det/scripts/: build_face_detection_dataset.py  eval_yolo_face.py  prepare_wider_easy_hard.py  train_yolo_face.py
face106/: OPTIMIZATION_ROADMAP.md  PROJECT_SUMMARY.md  README.en.md  README.md  REPORT.en.md  REPORT.md  compare_curves.py  optimization_log.md
face106-pkg/: LICENSE  MANIFEST.in  README.md  pyproject.toml
face106-pkg/examples/: quick_start.py
face106-pkg/face106/: __init__.py  detector.py
face106/configs/: jd_csprnet_w10_icme_ft256_e6_freeze.yaml  jd_csprnet_w10_icme_ft384_e8.yaml  jd_hrnet_w18_awing_384.yaml  lapa_csprnet_lite_f24_r12_m48_e4.yaml  (+30 more)
face68/: README.en.md  README.md  REPORT.en.md  REPORT.md  requirements.txt
landmarklab/: core.py  data.py  export_quant.py  model.py  ssl_pretrain.py  train.py
scripts/: eval_yolo_pose_nme.py  extract_celeba_extra.py  preview_wflw68.py
(+31 files in other folders)
