[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face106"
version = "0.1.0"
description = "106-point facial landmark detection (HRNet + AWing Loss + INT8 ONNX)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "weitianpeng", email = "weitianpeng@joyy.com" }]
keywords = ["face", "landmark", "facial-landmark", "106-point", "hrnet", "onnx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "Pillow>=9.0",
    "onnxruntime>=1.15",
]

[project.optional-dependencies]
torch = ["torch>=2.0", "torchvision>=0.15"]
opencv = ["opencv-python>=4.5"]

[project.urls]
"Homepage" = "https://github.com/weitianpeng/face106"
"Bug Tracker" = "https://github.com/weitianpeng/face106/issues"

[tool.setuptools.packages.find]
include = ["face106*"]

[tool.setuptools.package-data]
face106 = ["assets/*.onnx"]
